--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,24 @@ ul li {
   z-index: 500;
 }
 
+#pop-score {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  z-index: 550;
+
+  .window__content {
+    padding: 0.6rem 1rem;
+  }
+}
+
+.pop-score__label {
+  font-family: var(--f-title);
+  font-size: 0.7rem;
+  letter-spacing: 0.05rem;
+  margin-right: 0.4rem;
+}
+
 img {
   width: 100%;
 }
